--- a/src/app/main-content/comments/comments.component.scss
+++ b/src/app/main-content/comments/comments.component.scss
@@ -10,6 +10,7 @@ section {
     justify-content: center;
     align-items: flex-end;
     overflow-x: hidden;
+    margin-top: -1px;
     @media (max-width: 1000px) {
         align-items: center;
     }
