--- a/src/app/main-content/contact-me/contact-me.component.scss
+++ b/src/app/main-content/contact-me/contact-me.component.scss
@@ -8,6 +8,8 @@ section {
     align-items: center;
     font-family: 'Karla';
     color: white;
+    margin-top: -1px;
+
 
     @media (max-width: 1080px) {
         align-items: flex-start;
