--- a/src/app/main-content/projects/projects.component.scss
+++ b/src/app/main-content/projects/projects.component.scss
@@ -5,6 +5,7 @@ section {
     height: 581px;
     background: #1C1C1C;
     font-family: 'Karla';
+    margin-top: -1px;
     @media (max-width: 1000px) {
         display: flex;
         justify-content: center;
