--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -6,6 +6,7 @@ section {
     background-color: #1C1C1C;
     font-family: 'Karla';
     color: white;
+    margin-top: -1px;
 
     h2 {
         font-family: 'Fira Code';
